<resources>
    <string name="app_name" translatable="false">ManageProduct</string>
    <string name="login_ok">Login Successfully</string>
    <string name="btn_login">Login</string>
    <string name="hint_pass">Password</string>
    <string name="cb_text">Remember me</string>
    <string name="hint_user">User</string>
    <string name="successful">Signed Up Correctly</string>
    <string name="data_empty">Fields can not be empty</string>
    <string name="passCase">Password must contain at least one uppercase letter.</string>
    <string name="passDigit">Password must contain at least one digit</string>
    <string name="passMinLength">The password must be at least 8 characters long</string>
    <string name="mailInvalid">The mail is not a valid mail</string>
    <string name="add_name">Name</string>
    <string name="add_brand">Trademark</string>
    <string name="add_dosage">Dosage</string>
    <string name="add_price">Price</string>
    <string name="add_stock">Stock</string>
    <string name="add_description">Description...</string>
    <string name="action_sort_product">Sort</string>
    <string name="action_general_settings">General Settings</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="double_message">Ha seleccionado %1$s (%2$s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
