<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jsw.MngProductFragments.ManageProduct_Fragment">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="guardar"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:id="@+id/fab_guardar"
        app:backgroundTint="?attr/colorPrimaryDark"
        app:elevation="5dp"
        android:layout_alignParentEnd="true"
        app:fabSize="normal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_nombre"
        android:layout_toEndOf="@+id/ib_imagen"
        android:layout_toRightOf="@+id/ib_imagen">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name" />

            </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ib_imagen"
        android:id="@+id/til_marca"
        android:layout_below="@id/til_nombre">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_brand"
            />
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_dosage"
        android:layout_below="@+id/til_marca"
        android:layout_toRightOf="@+id/ib_imagen"
        android:layout_toEndOf="@+id/ib_imagen">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_dosage" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_stock"
        android:layout_below="@id/ib_imagen"
        android:layout_alignEnd="@id/ib_imagen"
        android:layout_alignRight="@id/ib_imagen"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_stock" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_price"
        android:layout_below="@id/til_dosage"
        android:layout_toRightOf="@id/til_stock">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_price" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/til_descripcion"
        android:layout_below="@id/til_stock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/ib_imagen"
        android:layout_above="@+id/til_price"
        android:layout_alignParentStart="true" />


</RelativeLayout>
